--- a/lib/tests/CMakeLists.txt
+++ b/lib/tests/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(krico_backup_tests
         TemporaryFileTest.cpp
         TemporaryDirectoryTest.cpp
         DirectoryTest.cpp
+        DigestTest.cpp
 )
 target_link_libraries(krico_backup_tests libKricoBackup GTest::gtest_main)
 
