Added dependency to spdlog + better I/O operations via macros

--- a/lib/tests/CMakeLists.txt
+++ b/lib/tests/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(krico_backup_tests
         DirectoryTest.cpp
         DigestTest.cpp
         BackupTest.cpp
+        Environment.cpp
 )
 target_link_libraries(krico_backup_tests libKricoBackup GTest::gtest_main)
 
