Digest::path no longer repeats characters

--- a/lib/tests/CMakeLists.txt
+++ b/lib/tests/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(krico_backup_tests
         BackupDirectoryIdTest.cpp
         BackupDirectoryTest.cpp
         BackupRunnerTest.cpp
+        BackupRepositoryLogTest.cpp
 )
 target_link_libraries(krico_backup_tests libKricoBackup GTest::gtest_main)
 
